--- a/views/frontPage.ejs
+++ b/views/frontPage.ejs
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Front Page of Reddit</title>
-</head>
-
-<body>
-    <h1>Welcome to the front page of Reddit!</h1>
-</body>
-
-</html>
+<%- include('partials/head')%>
+    <%- include('partials/navbar')%>
+        <h1>Welcome to the front page of Reddit!</h1>
+        <%- include('partials/footer')%>
