--- a/views/subreddit.ejs
+++ b/views/subreddit.ejs
@@ -1,37 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>/r/<%=name%>
-    </title>
-</head>
-
-<body>
-    <h1>Welcome to the <%= name %> subreddit!</h1>
-    <p>Description: <%=description%>
-    </p>
-    <p>Number of subscribers: <%=subscribers%>
-    </p>
-    <ul>
-        <% for(post of posts){ %>
-            <li>
-                <%=post.title%>
-                    <ul>
-                        <li>
-                            Author: <%=post.author%>
-                        </li>
-                        <%if(post.img){%>
-                            <li>
-                                <img src="<%=post.img%>" alt="reddit post image">
-                            </li>
-                            <%}%>
-                    </ul>
-            </li>
-            <%}%>
-    </ul>
-</body>
-
-</html>
+<%- include('partials/head')%>
+    <%- include('partials/navbar')%>
+        <div class="container">
+            <h1>Welcome to the <%= name %> subreddit!</h1>
+            <h2>
+                <%=description%>
+            </h2>
+            <p>Number of subscribers: <span id="subscribers">
+                    <%=subscribers%>
+                </span>
+            </p>
+            <% for(post of posts){ %>
+                <article>
+                    <p>
+                        <%=post.title%> - <b>
+                                <%=post.author%>
+                            </b>
+                    </p>
+                    <%if(post.img){%>
+                        <img src="<%=post.img%>" alt="reddit post image">
+                        <%}%>
+                </article>
+                <%}%>
+        </div>
+        <%- include('partials/footer')%>
